--- a/gb/20/3/2/n11907900.md
+++ b/gb/20/3/2/n11907900.md
@@ -1,57 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wqzpig2732/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wqzpig2732/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wqzpig2732/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ckfwfs3192/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ckfwfs3192/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ckfwfs3192/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ckfwfs3192/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>港油麻地数十居民游行 反对区内设指定诊所</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/2003011931331538-600x400.jpg" />
 <h6>数十名油麻地居民3月1日在区内游行，不满医管局没有咨询居民及区议会意见，便选定油麻地赛马会普通科门诊作指定诊所。（宋碧龙／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年03月02日讯】（大纪元记者张家熙香港综合报导）连续多个周未多区都有集会和游行，<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md">反对</a>在区内设<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E6%8C%87%E5%AE%9A%E8%AF%8A%E6%89%80.md">指定诊所</a>选址，分流武汉肺炎症状较轻微的患者。</p>
-<p><a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E6%B2%B9%E9%BA%BB%E5%9C%B0.md">油麻地</a>南区议员、社区前进的胡穗珊3月1日在区内举行居民大会及游行，不满医管局没有咨询居民及区议会意见，便选定油麻地赛马会普通科门诊作<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E6%8C%87%E5%AE%9A%E8%AF%8A%E6%89%80.md">指定诊所</a>。</p>
+	<p>【大纪元2020年03月02日讯】（大纪元记者张家熙香港综合报导）连续多个周未多区都有集会和游行，<ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>在区内设<ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E6%8C%87%E5%AE%9A%E8%AF%8A%E6%89%80.md#1">指定诊所</a>选址，分流中共肺炎症状较轻微的患者。</p>
+<p><ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E6%B2%B9%E9%BA%BB%E5%9C%B0.md#1">油麻地</a>南区议员、社区前进的胡穗珊3月1日在区内举行居民大会及游行，不满医管局没有咨询居民及区议会意见，便选定油麻地赛马会普通科门诊作<ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E6%8C%87%E5%AE%9A%E8%AF%8A%E6%89%80.md#1">指定诊所</a>。</p>
 <p>胡穗珊表示，区内人口稠密，有多栋私人大厦和大型屋苑骏发花园，指定诊所与骏发花园仅一街之隔，而且庙街属于游客区，忧虑一旦出现社区爆发，后果不堪设想。她多次邀请医管局派员出席是次居民大会，但医管局拒绝。她又曾两度去信医管局，希望查询清楚指定诊所的运作，包括病人分流、等候化验结果期间的安置安排等资料，但医管局只笼统地透过公关传讯部回复，未能解释实际流程。批评政府无咨询、无资讯。</p>
-<p>居民大会结束后，胡穗珊及社区前进成员由榕树头，游行至赛马会普通科位于炮台街的诊所，有数十名市民参加。他们沿途高呼：“指定诊所近民居，社区感染惹忧虑”等口号。到达终点后，胡穗珊等人撕烂印有“废炎医管局”的标语，抗议医管局拒绝聆听区内居民意见。其间有十多名军装警员在众坊街及炮台街戒备，人群在游行结束后散去，有警员在<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E6%B2%B9%E9%BA%BB%E5%9C%B0.md">油麻地</a>附近进行截查参与游行的市民，并拘捕至少3名年轻人。</p>
-<p>另外，近100人响应网上号召在在筲箕湾巴士总站集合，经筲箕湾道游行至西湾河。<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md">反对</a>政府将筲箕湾赛马会普通科门诊诊所，列作指定诊所。期间有人走出马路，以发泡胶箱、垃圾袋、雪糕筒快闪堵路。随后一批防暴警察到场，在巴士总站附近行人天桥拉起封锁线戒备，又曾截查数人，但未有作拘捕。</p>
+<p>居民大会结束后，胡穗珊及社区前进成员由榕树头，游行至赛马会普通科位于炮台街的诊所，有数十名市民参加。他们沿途高呼：“指定诊所近民居，社区感染惹忧虑”等口号。到达终点后，胡穗珊等人撕烂印有“废炎医管局”的标语，抗议医管局拒绝聆听区内居民意见。其间有十多名军装警员在众坊街及炮台街戒备，人群在游行结束后散去，有警员在<ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E6%B2%B9%E9%BA%BB%E5%9C%B0.md#1">油麻地</a>附近进行截查参与游行的市民，并拘捕至少3名年轻人。</p>
+<p>另外，近100人响应网上号召在在筲箕湾巴士总站集合，经筲箕湾道游行至西湾河。<ahref="https://github.com/ckfwfs3192/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>政府将筲箕湾赛马会普通科门诊诊所，列作指定诊所。期间有人走出马路，以发泡胶箱、垃圾袋、雪糕筒快闪堵路。随后一批防暴警察到场，在巴士总站附近行人天桥拉起封锁线戒备，又曾截查数人，但未有作拘捕。</p>
 <p>在九龙湾丽晶花园，晚上数十名居民不满政府将屋苑和区内学校附近的九龙湾健康中心划作指定诊所，由丽晶花园内的羽毛球场起步，游行至附近的启业邨。◇</p>
+<figure id="attachment_11908777" aria-describedby="caption-attachment-11908777" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628562188.jpg"><img class="size-large wp-image-11908777" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628562188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908777" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。图为油尖旺区议员胡穗珊（中）发言。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908794" aria-describedby="caption-attachment-11908794" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628212188.jpg"><img class="size-large wp-image-11908794" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628212188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908794" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908795" aria-describedby="caption-attachment-11908795" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628172188.jpg"><img class="size-large wp-image-11908795" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628172188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908795" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。民众手持诉求标语。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908801" aria-describedby="caption-attachment-11908801" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010629022188.jpg"><img class="size-large wp-image-11908801" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010629022188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908801" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。民众手持诉求标语。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908812" aria-describedby="caption-attachment-11908812" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010629182188.jpg"><img class="size-large wp-image-11908812" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010629182188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908812" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。图为游行终点油麻地赛马会诊所。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908778" aria-describedby="caption-attachment-11908778" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010629152188.jpg"><img class="size-large wp-image-11908778" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010629152188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908778" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。民众手持诉求标语。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908805" aria-describedby="caption-attachment-11908805" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628592188.jpg"><img class="size-large wp-image-11908805" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628592188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908805" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908779" aria-describedby="caption-attachment-11908779" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628082188.jpg"><img class="size-large wp-image-11908779" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628082188-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11908779" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908787" aria-describedby="caption-attachment-11908787" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628302188.jpg"><img class="size-large wp-image-11908787" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628302188-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11908787" class="wp-caption-text">2020年3月1日，香港有团体在西九龙中心天桥下派发口罩。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908791" aria-describedby="caption-attachment-11908791" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010628272188.jpg"><img class="size-large wp-image-11908791" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010628272188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908791" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。图为游行终点油麻地赛马会诊所。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_11908815" aria-describedby="caption-attachment-11908815" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/2003010629282188.jpg"><img class="size-large wp-image-11908815" title="" src="https://i.epochtimes.com/assets/uploads/2020/03/2003010629282188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11908815" class="wp-caption-text">2020年3月1日，香港民众在油麻地社区中心休憩花园举行“油麻地肺炎指定诊所 居民咨询大会及游行”活动。图为民众举起光复香港 时代革命旗帜。（宋碧龙／大纪元）</figcaption></figure>
 <p>责任编辑：李薇</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/2/n11907900.htm">港油麻地数十居民游行 反对区内设指定诊所</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】疫情扩散逾60国 中共销毁新冠文件</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11906520.htm">湖北官员下发消毒片 村民食后中毒送医</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11905498.htm">【新闻看点】世卫调肺炎最高级 病毒多可怕？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11906532.htm">中国首个被禁赛的游泳选手是钟南山女儿？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875921.htm">蝗虫集体进攻 为何单单绕开他们</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902923.htm">犹太拉比谈武汉肺炎：弥赛亚现身前十灾重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869303.htm">肺炎瘟疫《推背图》56象之卦如何解出路？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880656.htm">【三国英雄14】曹操如何对待背叛自己的人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901418.htm">【独家】辽宁卫健委下令销毁新冠疫情文件</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11904055.htm">王赫：习近平何人可用？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11904182.htm">【拍案惊奇】多国感染人数暴增 北京弃瑞德西韦？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901952.htm">【拍案惊奇】毒攻权力核心 武汉P4所曾招标改造</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901235.htm">【胡乃文开讲】体臭有2种原因 吃对食物摆脱身体异味</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11905498.htm">【新闻看点】世卫调肺炎最高级 病毒多可怕？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902303.htm">辛龙脸书亲发文：请大家帮刘真集气加油</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901457.htm">《花木兰》下月上映 刘亦菲首度回应撑警言论</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902416.htm">疫情下在家闭关练武功 大陆女子与小狗对决</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11904784.htm">子瑜捐款5000万韩圜助抗疫：希望大家健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901613.htm">《隐形人》影评：看不见的敌人 永远最棘手</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/20/1/24/n11817152.md#1">香港政府公布中共肺炎最新措施</a></li>
+<li><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/20/2/3/n11839962.md#1">香港美孚街坊连续两日反对设隔离营</a></li>
+<li><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/20/2/6/n11849065.md#1">不畏疫情 香港反送中示威者堵路60人被捕</a></li>
+<li><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/20/2/10/n11856866.md#1">香港多区市民游行 抗议设检疫中心</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wqzpig2732/djy/blob/master/gb/20/3/2/n11907900.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wqzpig2732/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wqzpig2732/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/2/n11425658.md#1" target="_blank">李小刚：中国大饥荒饿死3755.8万人？！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
+<li><a href="https://github.com/abqqad3453/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ckfwfs3192/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ckfwfs3192/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/2/n11907900.htm">港油麻地数十居民游行 反对区内设指定诊所</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ckfwfs3192/djy/blob/master/gb/20/3/2/n11907900.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ckfwfs3192/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ckfwfs3192/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ckfwfs3192/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
